[tool.poetry]
name = "iasp_command_center_service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python  =  "^3.11"
Django = "5.1.3"
djangorestframework = "3.15.2"
openpyxl = "3.0.10"
psycopg2-binary="2.9.5"
django-filter = "21.1"
django-cors-headers = "3.7.0"
django-postgres-copy="2.4.2"
requests = "2.32.0"
requests-toolbelt = "0.9.1"
xmltodict = "0.12.0"
veracode-api-signing = "24.11.0"
cryptography="44.0.0"
urllib3 = "^1.26.19"
certifi = "2024.2.2"
httpie = "*"


[tool.poetry.extras]
file_aws = ["astro-cloud-aws"]
file_azure = ["astro-cloud-azure"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"




[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
priority = "explicit"
